[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Spikes.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 257.5, 23 )

[node name="Spikes" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer_Damage" type="Timer" parent="."]
wait_time = 1.334

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spikes_body_exited"]
[connection signal="timeout" from="Timer_Damage" to="." method="_on_Timer_Damage_timeout"]
